i have changed the code - added a page "upcoming orientations" and respective edits sccordingly
Co-Authored-By: pragyaaa305 <206584887+pragyaaa305@users.noreply.github.com>
Co-Authored-By: tech-with-sakshi <216918498+tech-with-sakshi@users.noreply.github.com>

--- a/navbar.html
+++ b/navbar.html
@@ -26,7 +26,7 @@
             <li><a href="index.html#why">WHY</a></li>
             <li><a href="index.html#domain">DOMAINS</a></li>
             <li><a href="index.html#societies">SOCIETIES</a></li>
-            <li><a href="contact-page.html">CONTACT</a></li>
+            <li><a href="upcoming-orientation.html">UPCOMINGS</a></li>
         </ul>
 
         <!-- Right: Optional (can leave empty or add icons) -->
