added the links
Co-Authored-By: pragyaaa305 <206584887+pragyaaa305@users.noreply.github.com>
Co-Authored-By: tech-with-sakshi <216918498+tech-with-sakshi@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- Buttons -->
         <div class="hero-buttons">
             <a href="#societies" class="btn-primary">LET’S GO</a>
-            <a href="contact-page.html" class="btn-secondary">ABOUT US</a>
+            <a href="contact-page.html" class="btn-secondary">CONTACT US</a>
         </div>
     </div>
 
