--- a/upcoming-orientation.html
+++ b/upcoming-orientation.html
@@ -29,7 +29,7 @@
           <img src="image/whatsapp-icon.png" alt="Calendar Icon" class="icon">
         </a>
         <a href="" class="icons">
-          <img src="image/search-icon.png" alt="Search Icon" class="icon">
+          <img src="image/form-icon.png" alt="Search Icon" class="icon">
         </a>
 
       </div>
@@ -46,8 +46,28 @@
         <a href="" class="icons">
           <img src="image/whatsapp-icon.png" alt="Calendar Icon" class="icon">
         </a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSenvKdhS-gQ4VygKWkTn91gu9i6e1xMkBxPX7vhNC9_69wMIQ/viewform?usp=dialog" class="icons">
+          <img src="image/form-icon.png" alt="Search Icon" class="icon">
+        </a>
+          
+
+      </div>
+    </div>
+
+
+    <!-- Card 3 -->
+    <div class="card">
+      <div class="poster">
+        <img src="image/swe-orientatation.jpg" alt="Avira Poster">
+      </div>
+      <div class="card-content">
+        <div class="society">SWE</div>
+        <div class="details">02/09/25, Tuesday, Auditorium</div>
         <a href="" class="icons">
-          <img src="image/search-icon.png" alt="Search Icon" class="icon">
+          <img src="image/whatsapp-icon.png" alt="Calendar Icon" class="icon">
+        </a>
+        <a href="" class="icons">
+          <img src="image/form-icon.png" alt="Search Icon" class="icon">
         </a>
           
 
