--- a/upcoming-orientation.html
+++ b/upcoming-orientation.html
@@ -63,7 +63,7 @@
       <div class="card-content">
         <div class="society">SWE</div>
         <div class="details">02/09/25, Tuesday, Auditorium</div>
-        <a href="" class="icons">
+        <a href="https://chat.whatsapp.com/FSXKVhyMCpfCmM9XWwCgG9?mode=ac_t" class="icons">
           <img src="image/whatsapp-icon.png" alt="Calendar Icon" class="icon">
         </a>
         <a href="" class="icons">
